package domain;

public class Concesion {
	
	private String estaciones;

	public String getEstaciones() {
		return estaciones;
	}

	public void setEstaciones(String estaciones) {
		this.estaciones = estaciones;
	}

	public Concesion(String estaciones) {
		this.estaciones = estaciones;
	}

	@Override
	public String toString() {
		return "Concesion [estaciones=" + estaciones + "]";
	}
	
	public String addEstacion() {
		
		return estaciones;
		
	}

	public void add(String string) {
		// TODO Auto-generated method stub
		
		
	}
	
   

}
